Add handling of metadata policies